--- a/src/styles.css
+++ b/src/styles.css
@@ -2,5 +2,15 @@
 :root {
   --white: #ffffff;
 
+  --text: #344054;
+
   --gray-200: #eaecf0;
+
+  --font-family: Inter, Segoe UI, Roboto, Helvetica, Arial, sans-serif;
+}
+
+.ctv-component {
+  font-family: var(--font-family);
+  font-size: 1rem;
+  font-weight: normal;
 }
