--- a/src/app/components/panel-menu/base-panel-menu.component.css
+++ b/src/app/components/panel-menu/base-panel-menu.component.css
@@ -73,11 +73,18 @@
 }
 
 .ctv-panelmenu .ctv-panelmenu-content .ctv-menuitem .ctv-menuitem-link {
-  padding: 0.75rem 1.25rem;
-  color: #495097;
-  border-radius: 0;
+  display: block;
+  padding: 0.5rem 0.75rem;
+  color: var(--gray-900);
+  border-radius: 0.375rem;
   transition: box-shadow 0.2s;
+  text-decoration: none;
   user-select: none;
+  font-weight: 600;
+  font-size: 1rem;
+  line-height: 24px;
+  display: flex;
+  align-items: center;
 }
 
 .ctv-panelmenu
@@ -92,7 +99,7 @@
   .ctv-panelmenu-content
   .ctv-menuitem
   .ctv-menuitem-link:not(.ctv-disabled):hover {
-  background: #e9ecef;
+  background: var(--gray-100);
 }
 
 .ctv-panelmenu
@@ -100,13 +107,25 @@
   .ctv-menuitem
   .ctv-menuitem-link:not(.ctv-disabled):hover
   .ctv.menuitem-text {
-  color: #495057;
+  color: var(--gray-900);
 }
 
 .ctv-panelmenu .ctv-panelmenu-content .ctv-menuitem .ctv-menuitem-link:focus {
   outline: 0 none;
   outline-offset: 0;
   box-shadow: inset 0 0 0 0.15rem #c7d2fe;
+}
+
+.ctv-panelmenu .ctv-panelmenu-content .ctv-menuitem .ctv-menuitem-link-active {
+  background: var(--primary-100);
+}
+
+.ctv-panelmenu
+  .ctv-panelmenu-content
+  .ctv-menuitem
+  .ctv-menuitem-link-active
+  .ctv-menuitem-text {
+  color: var(--primary-700);
 }
 
 .ctv-panelmenu .ctv-menuitem-text {
@@ -124,6 +143,12 @@
   border-top-right-radius: 0;
   border-bottom-right-radius: 4px;
   border-bottom-left-radius: 4px;
+}
+
+.ctv-panelmenu .ctv-menuitem-without-icon {
+  width: 24px;
+  height: 24px;
+  display: block;
 }
 
 .ctv-panelmenu-expanded.ctv-toggleable-content:not(.ng-animation),
