--- a/src/app/components/panel-menu/base-panel-menu.component.css
+++ b/src/app/components/panel-menu/base-panel-menu.component.css
@@ -3,7 +3,7 @@
   border: 0 none;
   color: var(--text);
   border-radius: 0.375rem;
-  transition: none;
+  transition: box-shadow 0.2s;
   font-weight: 600;
   font-size: 1rem;
   line-height: 24px;
