create testing to confirm dialog

--- a/src/app/components/button/button.component.css
+++ b/src/app/components/button/button.component.css
@@ -4,6 +4,7 @@
   border-radius: 0.5rem;
   cursor: pointer;
   display: inline-flex;
+  justify-content: center;
 
   &:disabled {
     cursor: initial;
