--- a/src/app/components/confirm-dialog/confirm-dialog.component.html
+++ b/src/app/components/confirm-dialog/confirm-dialog.component.html
@@ -1,4 +1,4 @@
-<div [ngClass]="getMaskClass()" *ngIf="maskVisible">
+<div [ngClass]="getMaskClass()" *ngIf="maskVisible" role="dialog">
   <div
     [ngClass]="{
       'ctv-dialog ctv-confirm-dialog ctv-component': true,
