config: test in confirm dialog

--- a/src/app/components/confirm-dialog/confirm-dialog.component.html
+++ b/src/app/components/confirm-dialog/confirm-dialog.component.html
@@ -21,6 +21,7 @@
           icon="close"
           variant="text"
           color="secondary"
+          ariaLabel="cancelAriaLabel"
           [ngClass]="{
             'ctv-dialog-header-icon ctv-dialog-header-close ctv-link': true
           }"
